--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -8,7 +8,10 @@ div {
     text-align: center;
     background-color: #64c0f4;
     color: #303030;
-    
+    /* position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0; */
 }
 
 h6 {
